--- a/app/views/customers/_mobility_panel.html.haml
+++ b/app/views/customers/_mobility_panel.html.haml
@@ -12,13 +12,13 @@
     - else
       = render 'customers/ridership_mobility_edit'
 
-    .form-group.col-sm-12
-      .col-sm-3
+    .form-group
+      .form-label
         = f.label :mobility_id, translate_helper(:customer_default_mobility) 
-      .col-sm-9
+      .form-field
         = f.collection_select :mobility_id, @mobilities, :id, :name, {include_blank: true},  {class: 'form-control'}
-    .form-group.col-sm-12
-      .col-sm-3
+    .form-group
+      .form-label
         = f.label :mobility_notes, translate_helper(:mobility_notes) 
-      .col-sm-9
+      .form-field
         = f.text_field :mobility_notes, class: 'form-control'
