--- a/app/views/runs/_date_time_panel.html.haml
+++ b/app/views/runs/_date_time_panel.html.haml
@@ -6,35 +6,35 @@
       = translate_helper(:date_and_time)
   .panel-body{style: 'padding: 5px;'}
     - unless @is_repeating_run
-      .form-group.col-sm-12
-        .col-sm-3
+      .form-group
+        .form-label
           = f.label :date, translate_helper("date") 
-        .col-sm-9
+        .form-field
           .input-group.datepicker-icon
             = f.text_field :date, :size => 10, :value => format_time_for_listing_day(@run.date), class: 'form-control datepicker', readonly: true
             .input-group-btn
               %button.btn.btn-default{:type => "button"}
                 = image_tag "calendar-clock.png"
-    .form-group.col-sm-12.scheduled_time
-      .col-sm-3
+    .form-group.scheduled_time
+      .form-label
         = f.label :scheduled_start_time, translate_helper("scheduled_start_time")
-      .col-sm-9
+      .form-field
         = render 'shared/time_inputs', field_name: :scheduled_start_time, time: @run.scheduled_start_time, f: f
-    .form-group.col-sm-12.scheduled_time
-      .col-sm-3
+    .form-group.scheduled_time
+      .form-label
         = f.label :scheduled_end_time, translate_helper("scheduled_end_time")
-      .col-sm-9
+      .form-field
         = render 'shared/time_inputs', field_name: :scheduled_end_time, time: @run.scheduled_end_time, f: f
     - unless @is_repeating_run
-      .form-group.col-sm-12
-        .col-sm-3
+      .form-group
+        .form-label
           = f.label :actual_start_time, translate_helper("actual_start_time")
-        .col-sm-9
+        .form-field
           = render 'shared/time_inputs', field_name: :actual_start_time, time: @run.actual_start_time, f: f, required: false
-      .form-group.col-sm-12
-        .col-sm-3
+      .form-group
+        .form-label
           = f.label :actual_end_time, translate_helper("actual_end_time")
-        .col-sm-9
+        .form-field
           = render 'shared/time_inputs', field_name: :actual_end_time, time: @run.actual_end_time, f: f, required: false
 
 - if edit_mode != :show 
