--- a/app/views/runs/_form_header.html.haml
+++ b/app/views/runs/_form_header.html.haml
@@ -1,12 +1,20 @@
-.clearfix.col-sm-12#page-header
-  - if edit_mode == :new
-    .pull-right
+#page-header
+  - if edit_mode == :new=
+    %h1.page-title
+      = translate_helper("new_run")
+    .action-buttons
       = f.submit translate_helper(:save), class: 'btn action-button'
       = link_to translate_helper(:cancel), (params[:from_dispatch] == 'true' ? dispatchers_path(run_id: params[:run_id]) : runs_path), class: "btn btn-default"
-    %h1
-      = translate_helper("new_run")
   - else
-    .pull-right
+    %h1.page-title
+      = translate_helper("run_label")
+      - if @run.cancelled?
+        %span.label.label-danger{style: 'font-size: small;'}
+          Cancelled
+      - elsif @run.complete?
+        %span.label.label-info{style: 'font-size: small;'}
+          Completed
+    .action-buttons
       - if edit_mode == :edit && !@run.complete?
         = f.submit translate_helper(:update), class: 'btn action-button'
         = link_to translate_helper(:cancel), (params[:from_dispatch] == 'true' ? dispatchers_path(run_id: params[:run_id]) : runs_path), class: "btn btn-default"
@@ -19,11 +27,3 @@
           = link_to(translate_helper("delete"), @run, data: {:confirm => translate_helper("delete_run_confirm")}, :method => :delete, :id => 'run_delete', :class=>'btn action-button btn-danger') if !@run.new_record? && can?(:destroy, @run)
           = link_to translate_helper("edit"), edit_run_path(@run), :class=>'btn action-button' if !@run.new_record? && can?(:edit, @run)
         = link_to translate_helper(:back), (params[:from_dispatch] == 'true' ? dispatchers_path(run_id: params[:run_id]) : runs_path), class: "btn btn-default"
-    %h1
-      = translate_helper("run_label")
-      - if @run.cancelled?
-        %span.label.label-danger{style: 'font-size: small;'}
-          Cancelled
-      - elsif @run.complete?
-        %span.label.label-info{style: 'font-size: small;'}
-          Completed
