--- a/app/views/runs/_vehicle_panel.html.haml
+++ b/app/views/runs/_vehicle_panel.html.haml
@@ -3,17 +3,17 @@
     %h3.panel-title
       = translate_helper(:vehicle)
   .panel-body{style: 'padding: 5px;'}
-    .form-group.col-sm-12
-      .col-sm-3
+    .form-group
+      .form-label
         = f.label :vehicle, translate_helper("vehicle") 
-      .col-sm-9
+      .form-field
         = f.collection_select :vehicle_id, @vehicles, :id, :name, {include_blank: true}, {class: 'form-control'}
 
     - if !@is_repeating_run && edit_mode == :edit
-      .form-group.col-sm-12.use_vehicle_garage{style: 'display: none;'}
-        .col-sm-3
+      .form-group.use_vehicle_garage{style: 'display: none;'}
+        .form-label
           = label_tag :use_vehicle_garage, translate_helper(:use_vehicle_garage) 
-        .col-sm-9
+        .form-field
           = check_box_tag :use_vehicle_garage, true
 
 - unless @is_repeating_run
