--- a/app/views/users/_form_header.html.haml
+++ b/app/views/users/_form_header.html.haml
@@ -1,12 +1,14 @@
-.clearfix.col-sm-12#page-header
+#page-header
   - if edit_mode == :new
-    .pull-right
+    %h1.page-title
+      = translate_helper("new_user_heading")
+    .action-buttons
       = f.submit translate_helper(:save), class: 'btn action-button'
       = link_to translate_helper(:cancel), users_provider_path(@provider), class: "btn btn-default"
-    %h1
-      = translate_helper("new_user_heading")
   - else
-    .pull-right
+    %h1.page-title
+      = @user.display_name
+    .action-buttons
       - if edit_mode == :edit
         = f.submit translate_helper(:update), class: 'btn action-button'
         = link_to translate_helper(:cancel), user_path(@user), class: "btn btn-default"
@@ -17,5 +19,3 @@
         - if !@user.new_record? && can?(:edit, @user)
           = link_to translate_helper("reset_password"), show_reset_password_user_path(@user), :class=>'btn action-button btn-danger' 
           = link_to translate_helper("edit"), edit_user_path(@user), :class=>'btn action-button' 
-    %h1
-      = @user.display_name
