--- a/app/views/users/show_change_password.html.haml
+++ b/app/views/users/show_change_password.html.haml
@@ -10,14 +10,20 @@
 = form_for current_user, :url => change_password_path do |f|
   %fieldset
     %ol.section.first
-      %li
-        = f.label :current_password, translate_helper("current_password")
-        = f.password_field :current_password
-      %li
-        = f.label :password, translate_helper("password")
-        = f.password_field :password
-      %li
-        = f.label :password_confirmation, translate_helper("password_confirmation")
-        = f.password_field :password_confirmation
+      %li.form-group
+        .form-label
+          = f.label :current_password, translate_helper("current_password")
+        .form-field
+          = f.password_field :current_password
+      %li.form-group
+        .form-label
+          = f.label :password, translate_helper("password")
+        .form-field
+          = f.password_field :password
+      %li.form-group
+        .form-label
+          = f.label :password_confirmation, translate_helper("password_confirmation")
+        .form-field
+          = f.password_field :password_confirmation
     .actions
       = f.submit translate_helper("change_password_submit")
