--- a/app/views/users/show_reset_password.html.haml
+++ b/app/views/users/show_reset_password.html.haml
@@ -12,15 +12,17 @@
   %hr
 = form_for @user, :url => reset_password_user_path(@user) do |f|
   .row.col-sm-6
-    .form-group.col-sm-12
-      = f.label :password, translate_helper("password"), class: "col-md-2 control-label"
-      .col-md-10
+    .form-group
+      .form-label
+        = f.label :password, translate_helper("password")
+      .form-field
         = f.password_field :password, class: "form-control"
 
-    .form-group.col-sm-12
-      = f.label :password_confirmation, translate_helper("password_confirmation"), class: "col-md-2 control-label"
-      .col-md-10
+    .form-group
+      .form-label
+        = f.label :password_confirmation, translate_helper("password_confirmation")
+      .form-field
         = f.password_field :password_confirmation, class: "form-control"
 
-    .form-group.col-sm-12
+    .form-group
       = f.submit translate_helper("change_password_submit"), class: 'btn btn-primary'
