--- a/app/views/customers/_comments_panel.html.haml
+++ b/app/views/customers/_comments_panel.html.haml
@@ -5,13 +5,14 @@
     %h3.panel-title
       = translate_helper(:customer_comments_panel)
   .panel-body{style: 'padding: 5px;'}
-    .form-group.col-sm-12
-      .col-sm-3
+    .form-group
+      .form-label
         = f.label :comments, translate_helper(:customer_comments) 
-      .col-sm-9
+      .form-field
         = f.text_area :comments, class: 'form-control'
     - if edit_mode == :show
-      .pull-right
-        = link_to translate_helper(:view_customer_comments_report), 
-            customer_comments_report_customer_path(@customer),
-            class: "btn action-button"
+      .form-group
+        .pull-right
+          = link_to translate_helper(:view_customer_comments_report), 
+              customer_comments_report_customer_path(@customer),
+              class: "btn action-button"
