--- a/app/views/repeating_trips/_repetition_fields.html.haml
+++ b/app/views/repeating_trips/_repetition_fields.html.haml
@@ -1,26 +1,26 @@
-.form-group.col-sm-12
-  .col-sm-3
+.form-group
+  .form-label
     = f.label :start_date, translate_helper("start_date") 
-  .col-sm-9
+  .form-field
     .input-group.datepicker-icon
       = f.text_field :start_date, :size => 10, :value => format_time_for_listing_day(f.object.start_date), class: 'datepicker form-control', readonly: true
       .input-group-btn
         %button.btn.btn-default{:type => "button"}
           = image_tag "calendar-clock.png"
-.form-group.col-sm-12
-  .col-sm-3
+.form-group
+  .form-label
     = f.label :end_date, translate_helper("end_date") 
-  .col-sm-9
+  .form-field
     .input-group.datepicker-icon
       = f.text_field :end_date, :size => 10, :value => format_time_for_listing_day(f.object.end_date), class: 'datepicker form-control', readonly: true
       .input-group-btn
         %button.btn.btn-default{:type => "button"}
           = image_tag "calendar-clock.png"
-.form-group.col-sm-12
-  .col-sm-3
+.form-group
+  .form-label
     %label
       = translate_helper(:days_of_week)
-  .col-sm-9
+  .form-field
     - day_names = TranslationEngine.translate_text("date.day_names").split(",")
     = f.check_box :repeats_sundays 
     - if I18n.locale == :tags
@@ -46,16 +46,16 @@
     = f.check_box :repeats_saturdays 
     = day_names[6][0] rescue 'S'
     &nbsp;
-.form-group.col-sm-12
-  .col-sm-3
+.form-group
+  .form-label
     %label
       = translate_helper(:repeat_every)
-  .col-sm-6.col-md-3
+  .form-field
     = f.text_field :repetition_interval, :size => 2, class: 'col-sm-6 col-md-3 form-control'
     = translate_helper(:weeks)
-.form-group.col-sm-12
-  .col-sm-3
+.form-group
+  .form-label
     %label
       = translate_helper(:repetition_comments)
-  .col-sm-9
+  .form-field
     = f.text_area :comments, class: 'form-control', maxlength: 30
