--- a/app/views/runs/_form.html.haml
+++ b/app/views/runs/_form.html.haml
@@ -19,10 +19,10 @@
           %li= msg
 
   .col-sm-12
-    .col-sm-12.col-md-6.form-group
-      .col-sm-3
+    .form-group
+      .form-label
         = f.label :name, translate_helper("name") 
-      .col-sm-9
+      .form-field
         = f.text_field :name, class: 'form-control', required: true
 
   .col-sm-12.col-md-6
