--- a/app/views/runs/_run_completion_panel.html.haml
+++ b/app/views/runs/_run_completion_panel.html.haml
@@ -9,37 +9,37 @@
           = link_to translate_helper(:change_locations), request_change_locations_run_path(@run), :remote => true, :title => "Change run start and end locations", :class => "btn action-button"
           - if !@run.new_record? && can?(:edit, @run) && !@run.complete?
             = link_to translate_helper(:complete), complete_run_path(@run), :disabled => !@run.completable?, :title => !@run.completable? ? "Incomplete trips or missing fields" : "", :class => "btn action-button run-completion-button"
-      .form-group.col-sm-12
-        .col-sm-3
+      .form-group
+        .form-label
           = f.label :from_garage_address, translate_helper("start_location")
-        .col-sm-9
+        .form-field
           - from_address = @run.from_garage_address || @run.vehicle.try(:garage_address)
           = from_address.try(:address_text) 
-      .form-group.col-sm-12
-        .col-sm-3
+      .form-group
+        .form-label
           = f.label :to_garage_address, translate_helper("end_location")
-        .col-sm-9
+        .form-field
           - to_address = @run.to_garage_address || @run.vehicle.try(:garage_address)
           = to_address.try(:address_text) 
-    .form-group.col-sm-12
-      .col-sm-3
+    .form-group
+      .form-label
         = f.label :start_odometer, translate_helper("start_odometer")
-      .col-sm-9
+      .form-field
         = f.text_field :start_odometer, class: 'form-control'
-    .form-group.col-sm-12
-      .col-sm-3
+    .form-group
+      .form-label
         = f.label :end_odometer, translate_helper("end_odometer")
-      .col-sm-9
+      .form-field
         = f.text_field :end_odometer, class: 'form-control'
     - if current_provider.fields_required_for_run_completion.include?("unpaid_driver_break_time")
-      .form-group.col-sm-12
-        .col-sm-3
+      .form-group
+        .form-label
           = f.label :unpaid_driver_break_time, translate_helper("unpaid_break_time")
-        .col-sm-9
+        .form-field
           = f.text_field :unpaid_driver_break_time, class: 'form-control'
     - if current_provider.fields_required_for_run_completion.include?("paid")
-      .form-group.col-sm-12
-        .col-sm-3
+      .form-group
+        .form-label
           = f.label :paid, translate_helper("paid")
-        .col-sm-9
+        .form-field
           = f.select :paid, [[translate_helper("yes"), "true"], [translate_helper("no"), "false"]], {:selected => @run.paid.to_s }, class: 'form-control'
