--- a/app/views/dispatchers/_unassigned_trips_panel_title.html.haml
+++ b/app/views/dispatchers/_unassigned_trips_panel_title.html.haml
@@ -1,5 +1,5 @@
 = translate_helper("unassigned_trips")
-%span.trips-quantity
+%span.trips-quantity.header-info
   - stats = []
   - total_count = @trips.count
   - unscheduled_count = @unscheduled_trips.count
