--- a/app/views/dispatchers/_unassigned_trips_schedule_dropdown.html.haml
+++ b/app/views/dispatchers/_unassigned_trips_schedule_dropdown.html.haml
@@ -1,7 +1,7 @@
 %span.dropdown.dispatch-action.schedule_trip_dropdown{style: 'margin-bottom: 5px;'}
   %a.dropdown-toggle.non_jump_top{href: '#', type: 'button', style: 'color: white; font-size: small;', data: {toggle: 'dropdown'}} 
     Assign to
-    %i.fa.fa-ellipsis-h
+    %i.fas.fa-ellipsis-h
     %span.caret
   %ul.dropdown-menu.pull-right{style: 'max-height: 200px; overflow-y: auto;'}    
     - @schedule_options.each do |status_id, label|
