--- a/app/views/recurring_dispatchers/_unassigned_trips_panel.html.haml
+++ b/app/views/recurring_dispatchers/_unassigned_trips_panel.html.haml
@@ -1,14 +1,14 @@
 .panel.panel-warning#unassigned_trips_panel{style: 'margin: 0px;'}
   .panel-heading
-    .pull-right{style: 'padding-right: 0px;'}
+    .pull-right
       = render 'unassigned_trips_schedule_dropdown'
       - if can?(:new, RepeatingTrip)
         %span.dispatch-action
           = link_to new_repeating_trip_path(from_dispatch: true), title: translate_helper("new_repeating_trip_text") do 
-            %i.fa.fa-plus
+            %i.fas.fa-plus
       %span.panel-expand-collapse-reverse.dispatch-action{title: 'Collapse/expand'}
-        %i.fa.fa-chevron-down
-    %h3.panel-title.text-center
+        %i.fas.fa-chevron-down
+    %h3.panel-title
       = render 'unassigned_trips_panel_title'
 
   .panel-body
