--- a/app/views/recurring_dispatchers/_unassigned_trips_panel_title.html.haml
+++ b/app/views/recurring_dispatchers/_unassigned_trips_panel_title.html.haml
@@ -1,6 +1,5 @@
-.pull-left
-  = translate_helper("unassigned_trips")
-%span{style: 'font-size: small;'}
+= translate_helper("unassigned_trips")
+%span.header-info
   - stats = []
   - total_count = @trips.count
   - if total_count > 0
