--- a/app/views/recurring_dispatchers/_unassigned_trips_table.html.haml
+++ b/app/views/recurring_dispatchers/_unassigned_trips_table.html.haml
@@ -33,10 +33,10 @@
         %td= trip.notes
         %td
           = link_to repeating_trip_path(trip, from_dispatch: true), style: 'padding-right: 5px;', title: "View details" do 
-            %i.fa.fa-external-link
+            %i.fas.fa-external-link-alt
           - if can?(:edit, trip)
             = link_to edit_repeating_trip_path(trip, from_dispatch: true), style: 'padding-right: 5px;', title: 'Edit' do 
-              %i.fa.fa-pencil
+              %i.fas.fa-pencil-alt
 
 :javascript
   $(function() {
