--- a/app/views/recurring_dispatchers/_runs_panel.html.haml
+++ b/app/views/recurring_dispatchers/_runs_panel.html.haml
@@ -1,18 +1,17 @@
 .panel.panel-primary#runs_panel
   .panel-heading
-    .pull-right{style: 'padding-right: 0px;'}
+    .pull-right
       - if can?(:new, RepeatingRun)
         %span.dispatch-action
           = link_to new_repeating_run_path(from_dispatch: true), title: translate_helper("new_repeating_run_text") do 
-            %i.fa.fa-plus
+            %i.fas.fa-plus
       %span.panel-close-all-runs.dispatch-action{title: 'Close opened run panels'}
-        %i.fa.fa-remove
+        %i.fas.fa-remove
       %span.panel-expand-collapse.dispatch-action{title: 'Collapse/expand'}
-        %i.fa.fa-chevron-up
-    %h3.panel-title.text-center
-      .pull-left
-        = translate_helper(:runs_panel_header)
-      %span{style: 'font-size: small;'}
+        %i.fas.fa-chevron-up
+    %h3.panel-title
+      = translate_helper(:runs_panel_header)
+      %span.header-info
         - if @runs.any?
           = "Total runs: #{@runs.count}"
         - else
